2008-02-27  Mark Ellis <mark_ellis@users.sourceforge.net>

	* use GError
	* build simple widgets manually where glade not necessary
	* only activate remove button when app selected

2008-02-25  Mark Ellis <mark_ellis@users.sourceforge.net>

	* major structural rewrite
	* moved all device and backend processing into new file
	  synce_app_man.c
	* various minor changes

2008-02-20  Mark Ellis <mark_ellis@users.sourceforge.net>

	* check for alternative installation directory
	* support uninstall using Configuration Service Provider on
	  newer devices
	* general code improvements

2007-11-28  Mark Ellis <mark_ellis@users.sourceforge.net>

	* improve error and status reporting
	* remove redundant code
	* exclude CABs for other processors

2007-11-25  Mark Ellis <mark_ellis@users.sourceforge.net>

	* create independent software manager widget class
	* initialise rapi once rather than many times
	* small fixes

2007-10-20  Mark Ellis <mark_ellis@users.sourceforge.net>

	* updated gnome/gtk usage
	* updated autoconf/automake usage
	* fixes and tidying
	* added liborange support

2004-01-31  Mattias Eriksson <snaggen@acc.umu.se
                                                                                
	* Remove some files that shouldn't be in the CVS and add cvsclean

2004-01-22  Mattias Eriksson <snaggen@acc.umu.se
                                                                                
	* Add the russian translation by Michael Shigorin

2003-01-21  Mattias Eriksson  <snaggen@acc.umu.se>

	* add i18n